# zappy

./: .gitignore  Makefile  README.md  docker-compose.yml  doxyfile_ia  doxyfile_server  sample-env
ai/include/: Ai.hpp  Application.hpp  Client.hpp  Ia.hpp  Parser.hpp  ParsingError.hpp  Responses.hpp  Server.hpp  SocketError.hpp  Utils.hpp  ai.h
ai/src/: Application.cpp  Client.cpp  Ia.cpp  Inventory.cpp  Main.cpp  Message.cpp  Parser.cpp  Server.cpp  Tile.cpp  Utils.cpp  main.c  main.cpp
commons/include/: socket.h  utils.h
include/: core.h  map.h  parser.h
server/: Dockerfile  Makefile
server/include/: buffer_cmd.h  core.h  game.h  graph_commands.h  graphic.h  ia.h  ia_commands.h  item.h  map.h  parser.h  player.h  server.h  socket.h  utils.h
server/src/: commands.c  events.c  execution.c  fct_cli.c  loop.c  main.c  time_manage.c
server/src/core/: core.c
sfml/: CMakeLists.txt  Makefile
sfml/include/: App.hpp  Application.hpp  Cli.hpp  Client.hpp  Player.hpp  Render.hpp  Serv.hpp  Server.hpp  SocketError.hpp  Team.hpp  Utils.hpp
sfml/src/: App.cpp  Application.cpp  Cli.cpp  Client.cpp  Home.cpp  Ia.cpp  Main.cpp  Player.cpp  Render.cpp  Serv.cpp  Server.cpp  Team.cpp  Tools.cpp  Utils.cpp
src/: main.c
src/core/: core.c
src/game/: link_map.c  map.c
tests/: broadcast.c  events.c  game.c  graphics.c  ia.c  refresh.c  socket.c
tests/src/: events.c  game.c  parsing.c  socket.c  tests.tar  utils.c
webserver/: package-lock.json  package.json
webserver/router/: Dockerfile  package-lock.json  package.json  tsconfig.json
webserver/src/: index.ts
(+100 files in other folders)
